src/style.css
/* ... */
body.dark-mode .G-atb .T-I[aria-label^='Back'] div.T-I-J3,
body.dark-mode .G-atb .T-I[data-tooltip^='Back'] div.T-I-J3 {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_arrow_back_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_arrow_back_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .asl {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_report_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_report_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .ar9 {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_delete_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_delete_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .bAO {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_mark_email_read_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_mark_email_read_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .brW {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_schedule_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_schedule_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .Vj {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_add_task_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_add_task_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .bq5 {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_drive_file_move_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_drive_file_move_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .asb {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_label_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_label_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .bjy {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_more_vert_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_more_vert_24dp.svg') !important;
}

body.dark-mode .G-atb .asa > .asf {
  -webkit-mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_refresh_24dp.svg') !important;
  mask-image: url('chrome-extension://__MSG_@@extension_id__/images/toolbar_refresh_24dp.svg') !important;
}

/* Toolbar icons drawn as inline SVG (e.g. Mark as unread) */
body.dark-mode .G-atb .T-I .asa svg.T-I-J3,
body.dark-mode .G-atb .T-I .asa svg.T-I-J3 path {
  fill: #e8eaed !important;
}

/* Message header: unstarred star and attachment paperclip are light-theme
   dark sprites - invert them to match (a starred star keeps its yellow) */
body.dark-mode .nH.a98.iY.aHo .T-KT[aria-label='Not starred'] {
  filter: invert(0.78) !important;
}

body.dark-mode .nH.a98.iY.aHo img[src*='cleardot']:not(.T-KT-JX) {
  filter: invert(0.78) !important;
}

/* QUICK SETTINGS PANEL */
body.dark-mode .IU {
  background-color: var(--dm-bg) !important;
}

body.dark-mode .IU .VO,
body.dark-mode .IU .OG {
  color: #f1f1f1 !important;
}

body.dark-mode .IU .a21,
body.dark-mode .IU .Q2,
body.dark-mode .IU .ST {
  color: #e0e0e0 !important;
}

body.dark-mode fieldset.VM.aiL {
  background-color: var(--dm-surface) !important;
}

body.dark-mode .IU .OD,
body.dark-mode .IU .Tj {
  color: var(--dm-accent) !important;
}

body.dark-mode .nH.fY [role='presentation'] a.f0 {
  color: #a0a0a0 !important;
  opacity: 1 !important;
}

body.dark-mode .nH.fY [role='presentation'] a.f0:hover {
  color: var(--dm-accent) !important;
}

body.dark-mode .nH.fY [role='presentation'] a.f0[aria-selected='true'] {
  color: var(--dm-accent) !important;
  border-bottom: 2px solid var(--dm-accent) !important;
}

/* EMAIL VIEWER */
body.dark-mode .AO {
  color: #e0e0e0 !important;
}

body.dark-mode .AO a {
  color: var(--dm-accent) !important;
}

/* LABELS AND CHIPS */
body.dark-mode .at9,
body.dark-mode .at9 * {
  background-color: transparent !important;
  border-color: transparent !important;
  box-shadow: none !important;
}

/* DROPDOWN MENUS - removed black background */

/* EMPTY INBOX DARK IMAGE */
body.dark-mode .ar4.z .TD > .TC {
  background-image: url('chrome-extension://__MSG_@@extension_id__/images/ic_zero_inbox_2x_dark.png') !important;
  background-repeat: no-repeat;
  background-position: center;
  padding-top: 30px;
  height: 618px;
  width: 456px;
  background-color: #292929;
  color: transparent;
  font-size: 14px;
}

@-moz-document url-prefix() {
  body.dark-mode .ar4.z .TD > .TC {
    background-image: url('moz-extension://__MSG_@@extension_id__/images/ic_zero_inbox_2x_dark.png') !important;
  }
}

body.dark-mode .ar4,
body.dark-mode .aBO,
body.dark-mode .aB6,
body.dark-mode .bn .bl,
body.dark-mode .bzJiD,
body.dark-mode .vIO7af,
body.dark-mode .no,
body.dark-mode .Tm.aeJ,
body.dark-mode .brC-aT5-aOt-Jw,
body.dark-mode .aj5 .J-KU,
body.dark-mode .aj5.J-KU-Jg,
body.dark-mode .aKh,
body.dark-mode .aRs {
  background: var(--dm-surface) !important;
}

body.dark-mode .zA,
body.dark-mode .zA:hover,
body.dark-mode .Bs.nH.iY.bAt {
  background: var(--dm-surface) !important;
  color: #fff !important;
}

body.dark-mode .zA * {
  color: #fff !important;
}

body.dark-mode .TO .nU > .n0,
body.dark-mode .TO.NQ .nU > .n0,
body.dark-mode .TO.nZ .nU > .n0,
body.dark-mode .ah9 > .CJ,
body.dark-mode .n3 > .CL > .CK,
body.dark-mode .aAv {
  color: var(--dm-text-secondary) !important;
}

body.dark-mode .TO.nZ .n0 {
  color: #fff !important;
}

body.dark-mode .TO .n0 {
  color: var(--dm-text-secondary) !important;
}
/* ... */

